--- a/index.html
+++ b/index.html
@@ -40,13 +40,36 @@
         </ul>
       </li>
     </ul>
+    __________________________________________________________
     <ul id="ingredients"></ul>
+    __________________________________________________________
     <ul id="gallery"></ul>
+    __________________________________________________________
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
+    __________________________________________________________
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+    __________________________________________________________
+    <input
+      type="text"
+      id="validation-input"
+      data-length="6"
+      placeholder="Введи 6 символов"
+    />
+    ________________________________________________________________
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
     <!-- <script src="./js/task-01.js" type="module"></script> -->
     <!-- <script src="./js/task-02.js" type="module"></script> -->
-    <script src="./js/task-03.js" type="module"></script>
-    <script src="./js/task-04.js" type="module"></script>
-    <script src="./js/task-05.js" type="module"></script>
+    <!-- <script src="./js/task-03.js" type="module"></script> -->
+    <!-- <script src="./js/task-04.js" type="module"></script> -->
+    <!-- <script src="./js/task-05.js" type="module"></script> -->
     <script src="./js/task-06.js" type="module"></script>
     <script src="./js/task-07.js" type="module"></script>
     <script src="./js/task-08.js" type="module"></script>
