--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <!-- <script src="./js/task-01.js" type="module"></script> -->
-    <!-- <script src="./js/task-02.js" type="module"></script> -->
-    <!-- <script src="./js/task-03.js" type="module"></script> -->
-    <!-- <script src="./js/task-04.js" type="module"></script> -->
-    <!-- <script src="./js/task-05.js" type="module"></script> -->
+    <script src="./js/task-01.js" type="module"></script>
+    <script src="./js/task-02.js" type="module"></script>
+    <script src="./js/task-03.js" type="module"></script>
+    <script src="./js/task-04.js" type="module"></script>
+    <script src="./js/task-05.js" type="module"></script>
     <script src="./js/task-06.js" type="module"></script>
     <script src="./js/task-07.js" type="module"></script>
     <script src="./js/task-08.js" type="module"></script>
